# fastapi-bank-api

./: .gitignore  pyproject.toml
app/: main.py
app/api/: auth_router.py  auth_routes.py
app/db/: database.py
app/model/: account.py  transaction.py  user.py
app/models/: __init__.py  account.py  transaction.py  user.py
app/routers/: account_router.py  auth_router.py  transaction_router.py
app/schemas/: account_schema.py  transaction_schema.py  user_schema.py
app/security/: auth_manager.py  jwt.py
app/services/: account_service.py  auth_service.py  transaction_service.py
tests/: conftest.py
tests/auth/: test_auth_route.py  test_auth_service.py  test_security.py
tests/model/: test_account.py  test_transaction.py  test_user.py
tests/routers/: test_account_router.py  test_transaction_router.py
tests/schemas/: test_account_schema.py  test_transaction_schema.py  test_user_schema.py
tests/services/: test_account_service.py  test_transaction_service.py
