[project]
name = "fastapi-bank-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]
[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_default_fixture_loop_scope = "function"
